Corrected navigation on mobile
close #32

--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -193,11 +193,10 @@ header > nav > ul > li:not(.instagram-nav):not(.pinterest-nav) a:hover:after {
     align-items: center;
     background: rgb(250,246,242);
     border-bottom: 3px solid #77978c8e; /*Rahmenlinie unten vorher: #CDA274*/
-    display: block; /* Flexbox */
-    justify-content: space-between; /* zentriert entlang der Hauptachse */
-    margin: 0;
-    padding-top: 120px;
-    position: fixed; /*Position beim Scrollen*/
+    display: flex; /* Flexbox */
+    flex-direction: column;
+    justify-content: center; /* zentriert entlang der Hauptachse */
+    position: fixed;
     top: 0;
     left: 100%;
     width: 100%; /*Breite*/
@@ -216,6 +215,13 @@ header > nav > ul > li:not(.instagram-nav):not(.pinterest-nav) a:hover:after {
     left: 0;
 }
 
+.mobile-nav > ul {
+    padding-inline-start: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    width: 60%
+}
+
 .mobile-nav > ul > li {
     display: block;
     list-style-type: none;
@@ -223,13 +229,13 @@ header > nav > ul > li:not(.instagram-nav):not(.pinterest-nav) a:hover:after {
     padding: 10px 0; /*Innenabstand oben/unten, li/re*/
     position: relative;
     text-align: center;
-    vertical-align: middle;
+
 }
 
 .mobile-nav > ul > li:not(.instagram-nav):not(.pinterest-nav) a:not([aria-current]) {
     color:black;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 6vw;
     font-weight: 400;
     margin: 0;
     text-decoration:none; /*Unterstriche entfernen*/
@@ -239,13 +245,17 @@ header > nav > ul > li:not(.instagram-nav):not(.pinterest-nav) a:hover:after {
 .mobile-nav [aria-current] {
     color: rgb(68, 93, 85);
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 6vw;
     font-weight: 600;
-    margin: 0;
-    padding: 10px; /*damit Hover Effekt besser aussieht*/
     text-decoration: none; /*Unterstriche entfernen*/
     text-transform: uppercase;
     z-index: 2;
+}
+
+.mobile-nav > ul > .instagram-nav > a,
+.mobile-nav > ul > .pinterest-nav > a {
+    font-size: 7vw;
+    font-weight: 300;
 }
 
 
@@ -259,15 +269,13 @@ header > nav > ul > li:not(.instagram-nav):not(.pinterest-nav) a:hover:after {
     bottom: 0;
     display: block;
     position: absolute;
-    margin-left: 25%;
-    margin-right: 20%;
     transition: width 0.2s;
     z-index: -3;
 }
 
 .mobile-nav > ul > li:not(.instagram-nav):not(.pinterest-nav) a:hover:after {
     height: 100%;
-    width: 50%;
+    width: 100%;
 }
 
 /* MEDIA QUERY MOBILE NAV
